price fix
