# src/swagger.json
@@ -580,6 +580,31 @@
 				"parameters": []
 			}
 		},
+		"/tokens/prices": {
+			"get": {
+				"operationId": "GetTokenPrices",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/TokenPriceModel"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Tokens"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/tokens/{address}": {
 			"get": {
 				"operationId": "GetToken",
@@ -622,31 +647,6 @@
 						}
 					}
 				]
-			}
-		},
-		"/tokens/prices": {
-			"get": {
-				"operationId": "GetTokenPrices",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/TokenPriceModel"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Tokens"
-				],
-				"security": [],
-				"parameters": []
 			}
 		},
 		"/quote": {
